complete swagger
